# generative-ai-copurses

./: .gitignore  README.md  pyproject.toml
generative-ai-with-llm/: lab_1_summarize_dialogue.ipynb  lab_2_fine_tune_generative_ai_model.ipynb  lab_3_fine_tune_model_to_detoxify_summaries.ipynb
