[tool.poetry]
name = "generative-ai-courses"
version = "0.1.0"
description = ""
authors = ["flavorfan <fanck_1979@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
torchdata = "^0.9.0"
transformers = "^4.46.1"
datasets = "^3.0.2"
python-dotenv = "^1.0.1"
evaluate = "^0.4.3"
rouge-score = "^0.1.2"
loralib = "^0.1.2"
peft = "^0.13.2"
awscli = "^1.35.18"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
nodejs = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
